--- a/projetos/templates/projetos/reuniao.html
+++ b/projetos/templates/projetos/reuniao.html
@@ -142,6 +142,14 @@
             {% lng "Remover" "Remove" %}
           </button>
         {% endif %}
+
+        <div id="mensagens" style="font-size: small;"> {% comment %} flex: 1; {% endcomment %}
+          <input type="checkbox" name="enviar_mensagem" value="sim" id="enviar_mensagem"
+          {% if not user.eh_admin %}checked{% endif %}>
+          <label for="enviar_mensagem">
+            {% lng "Enviar mensagem para envolvidos (orientador e grupo)" "Send message to involved people (advisor and group)" %}
+          </label>
+        </div>
         
         <div class="form-check form-switch mb-1">
           {% if user.eh_prof_a %}
