--- a/professores/templates/professores/dinamicas_lista.html
+++ b/professores/templates/professores/dinamicas_lista.html
@@ -54,16 +54,14 @@
 
               {% if e.projeto %}
                 {% include "cabecalho_projeto.html" with projeto=e.projeto %}
-                <div class="grupo" style="margin-top: 1px;">
-                  <b>{% lng "Grupo" "Group" %}:</b>
-                  <ol>
-                    {% for alocacao in e.projeto.alocacao_set.all %} 
-                      <li><a class="imprimir" href="{% url 'estudante_detail' alocacao.aluno.id %}">{{alocacao.aluno.user.get_full_name}}
-                      <span class="curso">[{{ alocacao.aluno.curso2 }}]</span>
-                      <a class="email" href="mailto:{{alocacao.aluno.user.email}}">&lt;{{alocacao.aluno.user.email}}&gt;</a>&nbsp;
-                      </a></li>
-                    {% endfor %}
-                  </ol>
+
+                <div class="grupo" style="margin-top: 8px;">
+                  {% if e.alocacao %}  {% comment %} Banca Probation {% endcomment %}
+                    <b>{% lng "Estudante:" "Student:" %}</b>
+                    {% include "mostra_estudante.html" with alocacao=e.alocacao %}  
+                  {% else %}
+                    {% include "grupo_estudantes.html" with projeto=e.get_projeto %}
+                  {% endif %}
                 </div>
 
                 <div class="avaliacao" style="margin-top: 8px; overflow-wrap: break-word;">
