--- a/templates/grupo_estudantes.html
+++ b/templates/grupo_estudantes.html
@@ -6,19 +6,14 @@
 
 {% load linguas %}
 
-<b>
-  <span lang="pt">Grupo:</span>
-  <span lang="en" style="display: none;">Group:</span>
-</b>
+<b>{% lng "Grupo:" "Group:" %}</b>
 {% with alocacoes=projeto.alocacao_set.all %}
   <a class="email" href="mailto:{% for alocacao in alocacoes %}{{alocacao.aluno.user.email}}{% if not forloop.last %},{% endif %}{% endfor %}?subject=Capstone%20Insper%20-%20Projeto:%20{{projeto}}&body={% for alocacao in alocacoes %}{% if not forloop.first %}{% if forloop.last %}%20e{% else %},{% endif %}%20{% endif %}{{alocacao.aluno.user.get_full_name}}{% endfor %},%0D%0A%0D%0" target="_blank">
     <i class="fas fa-mail-bulk"></i>
   </a>
-  <ul style="margin-bottom:0px;">
+  <ul style="margin-bottom: 0px;">
     {% for alocacao in alocacoes %}
-    <li>
-      {% include "mostra_estudante.html" %}
-    </li>
+      <li>{% include "mostra_estudante.html" %}</li>
     {% endfor %}
   </ul>
 {% endwith %}
