--- a/professores/templates/professores/dinamicas_view.html
+++ b/professores/templates/professores/dinamicas_view.html
@@ -6,6 +6,7 @@
 
 {% load static %}
 {% load linguas %}
+{% load get_field %}
 
 <link rel="stylesheet" href="{% static 'bootstrap-select-1.13.14/dist/css/bootstrap-select.min.css' %}">
 <script src="{% static 'bootstrap-select-1.13.14/dist/js/bootstrap-select.min.js' %}"></script>
@@ -109,19 +110,31 @@
             });
 
           </script>
-          <br><br>
 
         {% endif %}
-        
-        <label for="local">
-          {% lng "Local" "Location" %} / {% lng "Vídeo-conferência" "Video-conference" %}:
-          <input id="local" name="local" type="text" size="36" style="width: 100%;" maxlength="280"
-          {% if encontro %}
-            value="{{encontro.location}}"
-          {% endif %} 
-          />
-        </label>
-        <br>
+
+        <div class="form-group mt-2">
+          <label for="tema">
+            {% lng "Tema" "Subject" %}:
+            <input id="tema" name="tema" type="text" size="56" style="width: 100%;" maxlength="{% max_length Encontro 'tema' %}"
+            placeholder="exemplo: Apoio a Grupos 1"
+            {% if encontro and encontro.tema %}
+              value="{{encontro.tema}}"
+            {% endif %} 
+            />
+          </label>
+        </div>
+
+        <div class="form-group mt-2">
+          <label for="local">
+            {% lng "Local" "Location" %} / {% lng "Vídeo-conferência" "Video-conference" %}:
+            <input id="local" name="local" type="text" size="56" style="width: 100%;" maxlength="{% max_length Encontro 'location' %}"
+            {% if encontro and encontro.location %}
+              value="{{encontro.location}}"
+            {% endif %} 
+            />
+          </label>
+        </div>
 
         <br>
         {% lng "Facilitador" "Facilitator" %}:<br>
