--- a/professores/templates/professores/dinamicas_lista.html
+++ b/professores/templates/professores/dinamicas_lista.html
@@ -66,8 +66,22 @@
       <table id="MentoriasTable" class="table table-borderless table-sm arredondado"><tbody>
         {% for e in encontros %} 
           <tr>
-            <td {% if not e.projeto %}style="background-color:rgb(239, 255, 239);"{% endif %}>
+            <td 
+              {% if e.bloqueado %}style="background-color:rgba(217, 93, 93, 1);"
+              {% elif e.startDate.date == hoje %}style="background-color:rgba(118, 118, 118, 0.5);"
+              {% elif not e.projeto %}style="background-color:rgb(239, 255, 239);"
+              {% endif %}>
               {% comment %} <a class="imprimir" href="{% url 'dinamicas_editar' e.id %}"> {% endcomment %}
+              
+              {% if e.bloqueado %}
+                <span style="display: inline-block; margin: 8px; background: #ffdddd; color: #b30000; padding: 2px 8px; border-radius: 4px; font-weight: bold;">
+                  {% lng "Bloqueado" "Blocked" %}
+                </span><br>
+              {% elif e.startDate.date == hoje %}
+                <span style="display: inline-block; margin: 8px; background: #ffffcc; color: #666600; padding: 2px 8px; border-radius: 4px; font-weight: bold;">
+                  {% lng "Vencido" "Expired" %}
+                </span><br>
+              {% endif %}
               <b>{% lng "Horário" "Time" %}:</b> {{e.startDate}} - {{e.endDate|date:'H:i'}}<br>
               {% if e.facilitador %}
                 <div class="facilitador" style="margin: 4px 0px 4px 0px;">
