--- a/templates/sem_banca.html
+++ b/templates/sem_banca.html
@@ -14,18 +14,18 @@
         <div class="agendamento">
           <div>
             {% include "cabecalho_projeto.html" with com_tit_original=True %}
-            <br>
+            {% comment %} <br>
             <b>{% lng "Mensagem" "Message" %}:</b>
             <a data-toggle="tooltip" data-html="true" animation="true" title="Janela de Mensagem" class="open-modal"
               data-url="{% url 'mensagem_email' 'banca_projeto' projeto.pk %}" href="{% url 'mensagem_email' 'banca_projeto' projeto.pk %}"> 
               {% lng "avaliadores" "examiners" %}
-            </a>
+            </a> {% endcomment %}
           </div>
 
           <div class="editar esconder">
             <a class="open-modal"
               data-url="{% url 'bancas_criar' %}" href="{% url 'bancas_criar'%}">
-              <button class="btn btn-primary mb-1"
+              <button class="btn btn-primary mb-1 ml-3"
               {% if user.tipo_de_usuario != 4 and user != projeto.orientador.user %}disabled{% endif %}>
                 {% lng "Criar" "Create" %}
               </button>
