--- a/templates/circulo_estados.html
+++ b/templates/circulo_estados.html
@@ -6,19 +6,19 @@
 
 <span style="padding-right: 2px;" data-toggle="tooltip" data-html="true" animation="true" title=
   {% if estado.cor == 'r' %}
-    "atrasado para concluir esse ponto
-    {% if estado.prazo %}(prazo={{estado.prazo}}){% endif %}
-    {% for item in estado.itens %}- {{item}}{% endfor %}
+    "atrasado para concluir esse ponto 
+    {% if estado.prazo %}(prazo = {{estado.prazo}}){% endif %}<br>
+    {% for item in estado.itens %}- {{item}}<br>{% endfor %}
     ">&#128308;
   {% elif estado.cor == 'y' %}
     "no prazo para concluir esse ponto
-    {% if estado.prazo %}(prazo={{estado.prazo}}){% endif %}
-    {% for item in estado.itens %}- {{item}}{% endfor %}
+    {% if estado.prazo %}(prazo = {{estado.prazo}}){% endif %}<br>
+    {% for item in estado.itens %}- {{item}}<br>{% endfor %}
     ">&#128993;
   {% elif estado.cor == 'p' %}
     "nova entrega realizada, verificar novamente
-    {% if estado.prazo %}(prazo={{estado.prazo}}){% endif %}
-    {% for item in estado.itens %}- {{item}}{% endfor %}
+    {% if estado.prazo %}(prazo = {{estado.prazo}}){% endif %}<br>
+    {% for item in estado.itens %}- {{item}}<br>{% endfor %}
     ">&#128995;
   {% elif estado.cor == 'g' %}
     "em dia com esse ponto">&#128994;
