--- a/academica/templates/academica/descontos.html
+++ b/academica/templates/academica/descontos.html
@@ -5,29 +5,42 @@
   Data: 20 de Julho de 2025
 {% endcomment %}
 
+{% load static %}
+{% load i18n %}
+{% load l10n %}
+{% load linguas %}
+
 {% block head %}
-  {% load static %}
-  {% load i18n %}
-  {% load l10n %}
-  {% load linguas %}
+  {% include "tabelas_includes.html" %}
 {% endblock %}
 
 {% block content %}
 
+  {% include "edicoes.html" with n_todas=True  %}
+
   <div id="atualizar">
     
-    {% for desconto in descontos %}
-      <div class="desconto">
-        {% if desconto.projeto %}
-          Projeto: {{ desconto.projeto }}
-        {% else %}
-          Alocação: {{ desconto.alocacao }}
-        {% endif %} -- 
-        Evento: {{ desconto.evento }} --
-        Nota: {{ desconto.nota }}
-      </div>
-    {% endfor %}
+    {% include "tabelas_top_ml.html" with tabela="Descontos" cabecalhos=cabecalhos %}
+      {% for desconto in descontos %}
+        <tr>
+          <td>
+            {% if desconto.projeto %}
+              {% lng "Projeto" "Project" %}: {{ desconto.projeto }}
+            {% else %}
+              {% lng "Alocação" "Allocation" %}: {{ desconto.alocacao.aluno }} &gt;&gt;&gt; {{ desconto.alocacao.projeto }}
+            {% endif %}
+          </td>
+          <td>{{ desconto.evento }}</td>
+          <td>
+            <span lang="pt">{% language "pt-br" %}{{ desconto.nota|floatformat:2}}{% endlanguage %}</span>
+            <span lang="en" style="display:none">{% language "en" %}{{ desconto.nota|floatformat:2}}{% endlanguage %}</span>
+          </td>
+        </tr>
+      {% endfor %}
+    {% include "tabelas_bottom.html" %}
 
   </div>
+
+  {% include "edicoes_ajax.html" with tabela="Descontos" %}
 
 {% endblock %}
