--- a/templates/documentos.html
+++ b/templates/documentos.html
@@ -55,7 +55,13 @@
       </div>
       
       {% if user and user.eh_admin %}
-        <a class="open-modal" data-url="{% url 'edita_documento' documento.id %}">&nbsp;<i class="fas fa-pencil-alt" style="font-size: 0.7em;"></i></a>
+        <a class="open-modal" data-url="{% url 'edita_documento' documento.id %}" data-toggle="tooltip" data-html="true" animation="true" title="editar"
+        >&nbsp;<i class="fas fa-pencil-alt" style="font-size: 0.7em;"></i></a>
+
+        {% if documento.tipo_documento.sigla == "RFR" %}
+          {% comment %} Relatório Final de Revisão - pode duplicar {% endcomment %}
+          <a href="{% url 'duplicar_publicar' documento.id %}" data-toggle="tooltip" data-html="true" animation="true" title="duplicar e tornar público">&nbsp;<i class="fas fa-copy" style="font-size: 0.7em;"></i></a>
+        {% endif %}
       {% endif %}
 
     </div>
