--- a/users/templates/users/contas_senhas.html
+++ b/users/templates/users/contas_senhas.html
@@ -32,7 +32,7 @@
               <td><a href="mailto:{{estudante.user.email}}">{{estudante.user.email}}</a></td>
             </tr>
           {% empty %}
-            <p>Não existem estudantes nessa edição.</p>
+            <p>{% lng "There are no students in this edition." "Não existem estudantes nessa edição." %}</p>
           {% endfor %}
         </tbody>
       </table>
@@ -44,14 +44,22 @@
 
       <div>
         <b>Template: <code>{{template}}</code></b><br>
-        {% comment %} <div style="border: 2px solid black; width: fit-content; padding: 4px;"></div> {% endcomment %}
         <textarea id="texto" name="texto" rows="12" cols="100" maxlength="{% max_length Carta 'texto' %}">{% if template.texto %}{{template.texto}}{% endif %}</textarea>
       </div>
 
-      <br><br>
-      <button class="btn btn-primary mb-1" type="submit">
-        {% lng "Enviar Contas e Senhas" "Send Accounts and Passwords" %}
-      </button>
+      <div class="mt-3">
+        <button class="btn btn-warning" type="submit" name="acao" value="enviar" {% if not user.eh_admin %}disabled{% endif %}>
+          {% lng "Enviar Contas e Senhas" "Send Accounts and Passwords" %}
+        </button>
+
+        <button class="btn btn-primary ml-3" type="submit" name="acao" value="atualiza" {% if not user.eh_admin %}disabled{% endif %}>
+          {% lng "Atualizar Mensagem" "Update Message" %}
+        </button>
+
+        <button class="btn btn-info ml-3" type="submit" name="acao" value="teste" {% if not user.eh_admin %}disabled{% endif %}>
+          {% lng "Enviar Teste para Mim" "Send Test to Me" %}
+        </button>
+      </div>
 
     </form>
 
@@ -80,6 +88,8 @@
     </script>
 
   </div>
+
+  {% include "mostra_variaveis_filtros.html" %}
 
   {% include "edicoes_ajax.html" %}
 
