--- a/users/templates/users/contas_senhas.html
+++ b/users/templates/users/contas_senhas.html
@@ -5,24 +5,31 @@
   Data: 30 de Maio de 2020
 {% endcomment %}
 
+{% load static %}
+{% load get_field %}
+{% load linguas %}
+
 {% block head %}
-  {% load static %}
-  {% load get_field %}
-  {% load linguas %}
   <script src="{% static 'js/sort.js' %}"></script>
+  <style>
+    #EstudantesTable td {
+      padding: 1px 6px;
+    }
+  </style>
 {% endblock %}
 
 {% block content %}
 
-  {% include "edicoes.html" %}<br>
-
-  <div id="atualizar">
+  {% include "edicoes.html" with com_cursos=True %}
+  
+  <div id="atualizar" class="mt-4">
 
     <form method="post" action="{% url 'envia_contas_senhas' %}" enctype="multipart/form-data">{% csrf_token %}
       <table id="EstudantesTable" class="tabela-padrao" ><thead><tr>
             <th>&nbsp;<input type="checkbox" id="todos_estudantes" checked>&nbsp;</th>
             <th onclick="sort('#EstudantesTable', '.item', 'td:nth-child(2)')">{% lng "Estudante" "Student" %}</th>
             <th onclick="sort('#EstudantesTable', '.item', 'td:nth-child(3)')">e-mail</th>
+            <th onclick="sort('#EstudantesTable', '.item', 'td:nth-child(4)')">{% lng "Curso" "Program" %}</th>
         </tr></thead>
         <tbody>
           {% for estudante in estudantes %} 
@@ -30,6 +37,7 @@
               <td class="text-center"><input type="checkbox" id="estudante{{estudante.id}}" class="est_check" name="estudante" value="{{estudante.id}}" checked></td>
               <td><a href="{% url 'estudante_detail' estudante.id %}">{{estudante.user.get_full_name}}</a></td>
               <td><a href="mailto:{{estudante.user.email}}">{{estudante.user.email}}</a></td>
+              <td>{{estudante.curso2}}</td>
             </tr>
           {% empty %}
             <p>{% lng "There are no students in this edition." "Não existem estudantes nessa edição." %}</p>
@@ -91,6 +99,6 @@
 
   {% include "mostra_variaveis_filtros.html" %}
 
-  {% include "edicoes_ajax.html" %}
+  {% include "edicoes_ajax.html" with com_cursos=True %}
 
 {% endblock %}
